fix cors + options